--- a/Chip-8/Todo.txt
+++ b/Chip-8/Todo.txt
@@ -2,4 +2,8 @@
 
 
 * make the cpu.memory from heap to save some stack;
-* change the registers into an array to make access more dynamic
+* change the registers into an array to make access more dynamic	** Done
+* test if not pressed the correct key (0-F) otherwise make a diffrent decision.
+
+Tests:
+* https://github.com/Rubenknex/Chip-8/blob/master/sctest.txt
